feat: Implement PostgreSQL support and migrations using Liquibase
- Configured PostgreSQL support for all repositories.
- Entity IDs are now generated using sequences.
- Added DDL scripts for table creation and data seeding using Liquibase.
- Liquibase migration scripts are written in XML notation.
- Added migrations for table creation and data seeding.
- Moved utility tables to a separate schema.
- Prohibited storing entity tables in the public schema.
- Integrated test-containers for testing.
- Created docker-compose.yml for deploying PostgreSQL in Docker with custom settings.
- Added support for configuration files for database connection and migrations.